# RATER-Competition-Solution

./: .editorconfig  .gitattributes  .gitignore  README.md  do_inference.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/assets/: pipeline_architecture.dot
data/competition_data/: sample_submission.csv  train.csv
data/competition_data/mini_test/: 1B7C80CD6491.txt  28EF3F88FB87.txt  318CE9377535.txt  41EDBE942DE4.txt  4A45C0B6B484.txt  51980DE241EE.txt  5851531DD4FE.txt  5C7ADE4CBDE6.txt  5F209EC4FAFE.txt  6EE64CBD47FA.txt  7E595A61B306.txt  881F7D8CED25.txt  899D394E518E.txt  9979504F6AB6.txt  A81929358853.txt  CC11E0190A6E.txt  EC1A91C83C2A.txt
data/competition_data/test/: 0006ED03C701.txt  000A58BC095E.txt  000BAD50D026.txt  001C3ABFA993.txt  002F3E0E697E.txt  0040F294F19D.txt  00501D556571.txt  00534F5F61BD.txt  0054DD9BDFC7.txt  005AE8C7F6B0.txt  005DA83BD607.txt  00615B338A19.txt  006720AC64CE.txt  006E0B604E93.txt  0073D8E68F46.txt  00755EA6AA06.txt  00898D9FB10A.txt  008B503940C9.txt  00941DB98302.txt  0094474956AD.txt  00A551B2B4B2.txt  00B0190508AD.txt  00B34659FCA9.txt  00B85A3DCAB5.txt  00C2C86DCC23.txt  00C315EF49C7.txt  00C843E757F4.txt  00D7F1791975.txt  00D9BE17185F.txt  00DF07E32141.txt  00E2ACFF9A93.txt  00E9AC98B45E.txt  00F477C0C28F.txt  00FF0A430A56.txt  01064A13A7F8.txt  010A9CFB3108.txt  011433B18B2F.txt  011495811E41.txt  011FFBFC193C.txt  012CB3D46662.txt  (+10332 more)
models/: README.md  effectiveness_models.pkl
models/deberta_lstm/: __init__.py
models/longformerwithbilstmhead/: __init__.py
(+15562 files in other folders)
