[tool.poetry]
name = "template-python-project-repo"
version = "0.1.0"
description = "A template for a data science or machine learning project in Python."
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
readme = "README.md"
packages = [{ include = "template_python_project_repo" }]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^3.0.3"
pytest = "^8.0.1"
jupyter = "^1.0.0"
polars = "^0.20.17"
seaborn = "^0.13.2"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
